ENG-4622: Only instantiate the elastic service when elastic is enabled in pro.